From 1d10033 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Add input keyword lst_format to function npz2hdf5() to allow
different unit/format inputs for LST. Update function docstring
accordingly

(*) Add input keyword lst_format to function loadnpz() to allow
different unit/format inputs for LST. Update function docstring
accordingly

From f84aef6 (ephemeris):
========================

In scripts/run_prisim.py,

(*) Remove recently commented lines related to recent changes in
handling ephemeris

In prisim/interferometry.py,

(*) Remove recently commented lines related to recent changes in
handling ephemeris in member function observe() of class
InterferometerArray

From baa9f04 (ephemeris):
========================

In scripts/run_prisim.py,

(*) Minor changes in the way earth location of the osberver is
initialized
(*) Sky model is precessed to the observing epoch
(*) Comment out some redundant sky coordinate conversions

In prisim/interferometry.py,

(*) In member function observe() of class InterferometerArray, take
precessed version of sky model to observing epoch before calculating
altaz coordinates. 

From e88db86 (master):
=====================

In scripts/run_prisim.py,

(*) Use updated ephemeris calculations from
astroutils.ephemeris_timing.py

From 4e8154a (emptysim):
=======================

In prisim/interferometry.py,

(*) In member function append_settings() of class ROI_parameters,
initialize telescope and freq attributes if they are found to be None.

In scripts/run_prisim.py,

(*) If no sources are found to be simulated for the entire simulation,
one source is assumed to be present just for purposes of memory
estimates.
(*) Pass chans, telescope, and freq_scale inputs in call to member
function append_settings() of class ROI_parameters even in case of
no sources (empty simulation).
(*) Update code to handle a completely empty simulation.

From 2c562ed (ephemeris):
========================
